<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rapido</string>
    <string name="compose_placeholder">What\'s going on?</string>
    <string name="action_send">Send</string>
    <string name="compose_to">To</string>
    <string name="compose_title">Compose</string>
    <string name="drafts_title">Drafts</string>
    <string name="location_picker_title">Location Picker</string>

    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="accounts_placeholder_twitter" translatable="false">\@ev</string>
    <string name="accounts_placeholder_facebook" translatable="false">Mark Zuckerberg</string>
    <string name="accounts_placeholder_google_plus" translatable="false">+Sundar Pichai</string>
    <string name="accounts_placeholder_foursquare" translatable="false">Dennis C.</string>

    <!--<string name="accounts_add">Add Account</string>-->
    <string name="account_not_connected">%s not connected</string>
    <string name="account_connected">Success! %s has been connected.</string>
    <string name="account_disconnected">%s has been disconnected.</string>
    <string name="account_authentication_error">Error: Cannot authenticate %s account.</string>

    <string name="alert_update_too_long">Update is too long. Shorten it up a bit. :)</string>
    <string name="alert_update_posted">%s posted</string>
    <string name="error_posting_update">Error: posting update</string>
    <string name="error_template">Error: %s</string>
    <string name="error_generic">Error: An error occurred</string>
    <string name="account_reauth">%s credentials invalid or expired, please reconnect account.</string>
    <string name="error_duplicate_message">Error: Duplicate Update</string>
    <string name="alert_title_posting">Posting…</string>
    <string name="alert_title_posted">Posted!</string>
    <string name="account_posting">Posting to %s</string>
    <string name="account_facebook_authorizing">Re-authorizing Facebook</string>
    <!--<string name="pref_header_accounts">Accounts</string>-->
    <string name="about_version_title">Version</string>
    <!--<string name="pref_accounts_connected">Connected</string>-->
    <!--<string name="pref_header_about">About</string>-->
    <string name="prefs_clear_accounts_title">Clear Account Settings</string>
    <!--<string name="prefs_clear_accounts_summary">Use this to fix account issues.</string>-->
    <!--<string name="prefs_accounts_connect">Tap to Connect</string>-->
    <string name="accounts_cleared">All Application Settings Cleared</string>
    <string name="alert_update_too_short">No update to send!</string>
    <string name="accounts_foursquare_not_installed">Foursquare not installed. :(</string>
    <string name="close">Close</string>

    <string name="error_shortening_authentication">Authentication Error While Shortening</string>
    <string name="error_parsing_response">Error Parsing Response</string>
    <string name="error_invalid_url">Invalid Url</string>
    <string name="error_server">Server Error</string>
    <string name="error_shortening">Error Shortening</string>
    <string name="auth_retry">Re-auth</string>
    <string name="account_finishing_up">Finishing up…</string>
    <string name="location_add">Add Location</string>
    <string name="error_location_unknown">Error: Location Not Available</string>
    <string name="location_search">Search</string>
    <string name="location_you_are_here">You are here!</string>

    <string name="image_description_category_icon">Generic Category Icon</string>
    <string name="distance_format_template" translatable="false">%s m —</string>
    <string name="error_location_picking">Error Selecting Location :(</string>
    <string name="error_checkin">Checkin failed.</string>
    <string name="alert_title_failed">Failed :(</string>
    <string name="post_retry">Retry</string>
    <string name="showcase_dismiss_text">Got it</string>
    <string name="showcase_text_accounts">Log in to your favorite social networks. Pick where you share each update.</string>
    <string name="showcase_text_bitly">Bit.ly shows up when you have links to share.</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="accounts_add">Add Account</string>
    <string name="action_back">back</string>
    <string name="perm_denied">%s permission denied.</string>
    <string name="perm_get_accounts_rationale">Google+ requires the "Contacts" permission to list connected google accounts.</string>
    <string name="perm_location_rationale">Location permission must be granted to attach a location.</string>
    <string name="perm_get_accounts_explainer">The following permission will ask to \"access your contacts\" this is necessary to list your Google accounts. \n\nNOTE: THIS APP WILL NOT BE SCANNING OR STORING YOUR CONTACTS.</string>
    <string name="perm_location_explainer">The location permission must be enabled to use this feature.</string>
    <string name="perm_enable">Enable</string>
    <string name="perm_header_image_lock">Lock</string>
    <string name="perm_header_image_location">Map Marker</string>
</resources>