<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/material_padding_double"
    android:layout_marginBottom="@dimen/material_padding"
    android:layout_marginRight="@dimen/material_keyline_1"
    android:layout_marginEnd="@dimen/material_keyline_1"
    android:layout_marginLeft="@dimen/material_keyline_1"
    android:layout_marginStart="@dimen/material_keyline_1"
    card_view:cardCornerRadius="4dp"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextCompose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="6"
            android:minHeight="120dp"
            android:maxHeight="400dp"
            android:gravity="bottom|start"
            android:background="@null"
            android:layout_margin="@dimen/material_padding"
            android:hint="@string/compose_placeholder" />

        <View
            android:id="@+id/seamCompose"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="@color/gray_light_super"
            android:layout_below="@id/editTextCompose" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seamCompose"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/material_icon_size_large"
                android:layout_height="@dimen/material_icon_size_large"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_action_edit"
                android:contentDescription="@string/drafts_title" />
                <!--style="?android:attr/actionButtonStyle"-->
            <ImageButton
                android:layout_width="@dimen/material_icon_size_large"
                android:layout_height="@dimen/material_icon_size_large"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_action_send"
                android:contentDescription="@string/action_send" />
                <!--style="?android:attr/actionButtonStyle"-->
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>