<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:textColor="@color/body_text"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true">
    <RelativeLayout
        android:id="@+id/compose_to_dropdown_expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/accounts_header"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/material_icon_size_large"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/accounts_select_all_wrapper"
                android:layout_width="@dimen/material_icon_size_small"
                android:layout_height="@dimen/material_icon_size_small"
                android:background="@drawable/circle_check"
                android:layout_marginLeft="@dimen/material_keyline_1"
                android:layout_marginStart="@dimen/material_keyline_1"
                android:layout_marginTop="@dimen/material_padding"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <include
                    android:id="@+id/accounts_select_all"
                    layout="@layout/widget_circle_checkbox" />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/material_keyline_2"
                android:layout_marginStart="@dimen/material_keyline_2"
                android:layout_toLeftOf="@+id/accounts_settings"
                android:layout_toStartOf="@+id/accounts_settings"
                android:textSize="@dimen/material_type_small"
                android:textStyle="bold"
                android:textColor="@color/header_text"
                android:text="@string/accounts_select"/>
            <ImageView
                android:id="@+id/accounts_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_action_settings"
                android:contentDescription="@string/settings_title" />
                <!--style="?android:attr/actionButtonStyle"-->
        </RelativeLayout>

        <View
            android:id="@+id/accounts_seam_top"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:layout_below="@id/accounts_header"
            android:background="@color/gray_light_super" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accounts_seam_top"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/accounts_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_padding"
                android:paddingBottom="@dimen/material_padding"
                android:clickable="true">
                <!--<CheckBox-->
                    <!--android:id="@+id/accounts_twitter_check"-->
                    <!--android:layout_width="@dimen/material_icon_size_micro"-->
                    <!--android:layout_height="@dimen/material_icon_size_micro"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_1"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_1"-->
                    <!--android:layout_centerVertical="true" />-->
                <TextView
                    android:id="@+id/accounts_twitter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/material_icon_size_micro"
                    android:layout_marginLeft="@dimen/material_keyline_2"
                    android:layout_marginStart="@dimen/material_keyline_2"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/accounts_placeholder_twitter" />
                <include
                    android:id="@+id/accounts_twitter_chip"
                    layout="@layout/chip_twitter"
                    android:layout_height="@dimen/material_icon_size_small"
                    android:layout_width="@dimen/material_icon_size_small"
                    android:layout_marginLeft="@dimen/material_keyline_1"
                    android:layout_marginStart="@dimen/material_keyline_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <View
                android:id="@+id/accounts_seam_twitter"
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:background="@color/gray_light_super" />

            <RelativeLayout
                android:id="@+id/accounts_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_padding"
                android:paddingBottom="@dimen/material_padding"
                android:clickable="true">
                <!--<CheckBox-->
                    <!--android:id="@+id/accounts_facebook_check"-->
                    <!--android:layout_width="@dimen/material_icon_size_micro"-->
                    <!--android:layout_height="@dimen/material_icon_size_micro"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_1"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_1"-->
                    <!--android:layout_centerVertical="true" />-->
                <TextView
                    android:id="@+id/accounts_facebook_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/material_icon_size_micro"
                    android:layout_marginLeft="@dimen/material_keyline_2"
                    android:layout_marginStart="@dimen/material_keyline_2"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/accounts_placeholder_facebook" />
                <include
                    android:id="@+id/accounts_facebook_chip"
                    layout="@layout/chip_facebook"
                    android:layout_height="@dimen/material_icon_size_small"
                    android:layout_width="@dimen/material_icon_size_small"
                    android:layout_marginLeft="@dimen/material_keyline_1"
                    android:layout_marginStart="@dimen/material_keyline_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <View
                android:id="@+id/accounts_seam_foursquare"
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:background="@color/gray_light_super" />

            <RelativeLayout
                android:id="@+id/accounts_foursquare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_padding"
                android:paddingBottom="@dimen/material_padding"
                android:clickable="true">
                <!--<CheckBox-->
                    <!--android:id="@+id/accounts_foursquare_check"-->
                    <!--android:layout_width="@dimen/material_icon_size_micro"-->
                    <!--android:layout_height="@dimen/material_icon_size_micro"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_1"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_1"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->
                <TextView
                    android:id="@+id/accounts_foursquare_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/material_icon_size_micro"
                    android:layout_marginLeft="@dimen/material_keyline_2"
                    android:layout_marginStart="@dimen/material_keyline_2"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/accounts_placeholder_foursquare" />
                <include
                    android:id="@+id/accounts_foursquare_chip"
                    layout="@layout/chip_foursquare"
                    android:layout_height="@dimen/material_icon_size_small"
                    android:layout_width="@dimen/material_icon_size_small"
                    android:layout_marginLeft="@dimen/material_keyline_1"
                    android:layout_marginStart="@dimen/material_keyline_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <View
                android:id="@+id/accounts_seam_plus"
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:background="@color/gray_light_super" />

            <RelativeLayout
                android:id="@+id/accounts_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_padding"
                android:paddingBottom="@dimen/material_padding"
                android:clickable="true">
                <!--<CheckBox-->
                    <!--android:id="@+id/accounts_plus_check"-->
                    <!--android:layout_width="@dimen/material_icon_size_micro"-->
                    <!--android:layout_height="@dimen/material_icon_size_micro"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_1"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_1"-->
                    <!--android:layout_centerVertical="true" />-->
                <TextView
                    android:id="@+id/accounts_plus_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/material_icon_size_micro"
                    android:layout_marginLeft="@dimen/material_keyline_2"
                    android:layout_marginStart="@dimen/material_keyline_2"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/accounts_placeholder_google_plus" />
                <include
                    android:id="@+id/accounts_plus_chip"
                    layout="@layout/chip_plus"
                    android:layout_height="@dimen/material_icon_size_small"
                    android:layout_width="@dimen/material_icon_size_small"
                    android:layout_marginLeft="@dimen/material_keyline_1"
                    android:layout_marginStart="@dimen/material_keyline_1"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <!--<View-->
                <!--android:id="@+id/accounts_seam_add"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:background="@color/gray_light_super" />-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/accounts_add"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/material_padding"-->
                <!--android:paddingBottom="@dimen/material_padding"-->
                <!--android:clickable="true"-->
                <!--android:background="@drawable/white_ripple">-->
                <!--&lt;!&ndash;<CheckBox&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/accounts_add_check"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="@dimen/material_icon_size_micro"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="@dimen/material_icon_size_micro"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginLeft="@dimen/material_keyline_1"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginStart="@dimen/material_keyline_1"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_centerVertical="true" />&ndash;&gt;-->
                <!--<TextView-->
                    <!--android:id="@+id/accounts_add_text"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/material_icon_size_micro"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_2"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_2"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:text="@string/accounts_add" />-->
                <!--<include-->
                    <!--android:id="@+id/accounts_add_chip"-->
                    <!--layout="@layout/chip_add"-->
                    <!--android:layout_height="@dimen/material_icon_size_small"-->
                    <!--android:layout_width="@dimen/material_icon_size_small"-->
                    <!--android:layout_marginLeft="@dimen/material_keyline_1"-->
                    <!--android:layout_marginStart="@dimen/material_keyline_1"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->
            <!--</RelativeLayout>-->

            <View
                android:id="@+id/accounts_seam_bottom"
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:background="@color/gray_light_super" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>